--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ title: Food and Recipe Collection
 tagline: A collection of photos, videos, and recipes of food
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
+description: "Food and Recipe Collection is a collection of final food photos, recipes, and cooking videos."
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
-author: CollectionBuilder
+author: Valentina Neblitt-Jones
 
 ##########
 # COLLECTION SETTINGS
