Edited about page image

--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -28,7 +28,7 @@ carousel-height: 300
 #
 # Featured image on About page - if left blank, CB will use image featured on the home page
 # use either an objectid (from an item in this collect), a relative location of an image in this repo, or a full url to an image elsewhere
-about-featured-image: https://cdil.lib.uidaho.edu/images/palouse_sm.jpg
+about-featured-image: coll007
 
 ##########
 # BROWSE PAGE
